--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>分布式下载器</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
 <div class="container">
@@ -19,6 +19,6 @@
         <p>正在加载任务列表...</p>
     </div>
 </div>
-<script src="script.js"></script>
+<script src="/static/script.js"></script>
 </body>
 </html>
